--- a/notebooks/ConfigureOutputAnalysis.ipynb
+++ b/notebooks/ConfigureOutputAnalysis.ipynb
@@ -418,7 +418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "weave-workflow",
+   "display_name": "Django",
    "language": "python",
    "name": "myenv"
   },
@@ -432,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
